--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ package-lock.json
 # VSCode
 ########################################################################
 .vscode/
+
+# data etc
+*.dat
